# dictcc-cli

./: CHANGELOG.md  Cargo.toml  README.md
ci/: gitlab-ci.yml
dictcc-cli/: Cargo.toml  README.md  build.rs
dictcc-cli/src/: main.rs  permutations.in
dictcc-cli/test/: prepare-db.sh
src/: main.rs  permutations.py
test/: prepare-db.sh
