[package]
name = "dictcc-cli"
version = "0.1.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0+"
homepage = "https://github.com/d-e-s-o/dictcc-cli"
repository = "https://github.com/d-e-s-o/dictcc-cli.git"
readme = "README.md"
keywords = ["dict", "cli"]
description = """
A command line application for translating between languages using dict.cc's database.
"""
build = "build.rs"

[dependencies.gcc]
version = "0.3.54"
path = "../gcc"

[dependencies.libc]
version = "0.2.34"
path = "../libc"

[dependencies.pkg-config]
version = "0.3.9"
path = "../pkg-config"

[dependencies.sqlite]
version = "0.23.9"
path = "../sqlite"

[dependencies.sqlite3-src]
version = "0.2.7"
path = "../sqlite3-src"

[dependencies.sqlite3-sys]
version = "0.12.0"
path = "../sqlite3-sys"

[replace]
"gcc:0.3.54" = { path = "../gcc" }
"libc:0.2.34" = { path = "../libc" }
"pkg-config:0.3.9" = { path = "../pkg-config" }
"sqlite:0.23.9" = { path = "../sqlite" }
"sqlite3-src:0.2.7" = { path = "../sqlite3-src" }
"sqlite3-sys:0.12.0" = { path = "../sqlite3-sys" }
